# Sea_Battle

./: .gitignore  LICENSE  README.md
.github/workflows/: release-client.yml
Sea_Battle_Client/: CMakeLists.txt  gameboard.cpp  main.cpp  resources.qrc
Sea_Battle_Client/App/: AppState.cpp  AppState.h  GameManager.cpp  GameManager.h  Handler.cpp  Handler.h  LobbyManager.cpp  LobbyManager.h  StateBinder.cpp  StateBinder.h  appcontroller.cpp  appcontroller.h  board.cpp  board.h  clickablescene.cpp  clickablescene.h  gameboard.cpp  gameboard.h  gamemanager.cpp  gamemanager.h  gameshipitem.cpp  gameshipitem.h  graphicsboard.cpp  graphicsboard.h  shipitem.cpp  shipitem.h
Sea_Battle_Client/Network/: MessageRouter.cpp  MessageRouter.h  tcp_client.cpp  tcp_client.h
Sea_Battle_Client/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Sea_Battle_Server/: CMakeLists.txt
Sea_Battle_Server/include/: ClientSession.h  Handler.h  LobbyManager.h  Server.h  SignalHandler.h  client_session.h  game_manager.h  game_session.h  handler.h  lobby.h  lobby_manager.h  message_dispatcher.h  server.h  session_manager.h  signal_handler.h
Sea_Battle_Server/src/: ClientSession.cpp  Handler.cpp  LobbyManager.cpp  Server.cpp  SessionManager.cpp  SignalHandler.cpp  client_session.cpp  game_manager.cpp  game_session.cpp  handler.cpp  lobby.cpp  lobby_manager.cpp  main.cpp  message_dispatcher.cpp  server.cpp  session_manager.cpp  signal_handler.cpp
Server/: CMakeLists.txt
Server/include/: Handler.h  MessageDispatcher.h  Server.h  SessionManager.h
Server/src/: Handler.cpp  MessageDispatcher.cpp  Server.cpp
common/: Message.h  PacketIO.cpp  PacketIO.h  Validator.cpp  Validator.h  protocol.h  ship_coord.h
